--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["nxtWatchApp/src/components/FailureViewCard/index.js"],"fileToBeOpened":"nxtWatchApp/src/components/NotFound/index.js"}
+{"ignoredFilesOrFolders":[],"openFiles":["nxtWatchApp/src/components/Trending/index.js","nxtWatchApp/src/styledComponent.js","nxtWatchApp/src/App.css","nxtWatchApp/src/components/VideoItem/index.js"],"fileToBeOpened":"nxtWatchApp/src/components/SavedVideos/index.js"}
