--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-{"ignoredFilesOrFolders":[],"openFiles":["nxtWatchApp/src/components/VideoItemDetails/index.js","nxtWatchApp/src/Context/context.js","nxtWatchApp/src/App.js"],"fileToBeOpened":"nxtWatchApp/src/components/SavedVideos/index.js"}
-=======
-{"ignoredFilesOrFolders":[],"openFiles":["nxtWatchApp/src/components/Trending/index.js","nxtWatchApp/src/styledComponent.js","nxtWatchApp/src/App.css","nxtWatchApp/src/components/VideoItem/index.js","nxtWatchApp/src/components/SavedVideos/index.js"],"fileToBeOpened":"nxtWatchApp/src/components/Gaming/GameCard/index.js"}
->>>>>>> ecb772aefd667f5e8f4815f26b161c6f0d9df1dc
+{"ignoredFilesOrFolders":[],"openFiles":["nxtWatchApp/src/components/VideoItem/index.js","nxtWatchApp/src/styledComponent.js","nxtWatchApp/src/components/Trending/index.js","nxtWatchApp/src/App.css","nxtWatchApp/src/index.js"],"fileToBeOpened":"nxtWatchApp/public/index.html"}
